# wp6_mobile_application_api

./: .env  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: mobile_api-ubuntu.yml  mobile_api.yml
.reuse/: dep5
create_device_info/: Cargo.toml
create_device_info/src/: main.rs
create_device_info/tests/: cli.rs
debian/: service
docs/: Mobile Application API.md  Smart Device Mobile API.md
docs/demo-setup/: README.md
docs/images/: default-boot.pu  mobile-api.drawio  sifis-home-boot.pu
fuzz/: Cargo.toml
mobile_api/: Cargo.toml
mobile_api/src/: configs.rs  error.rs  lib.rs  security.rs
mobile_api/src/configs/: tests.rs
mobile_api/src/error/: tests.rs
mobile_api/src/security/: tests.rs
mobile_api/tests/: config_io_test.rs  paths_test.rs
mobile_api_server/: Cargo.toml
mobile_api_server/scripts/: factory_reset.sh  restart.sh
mobile_api_server/src/: api_common.rs  api_v1.rs  device_status.rs  main.rs  state.rs
mobile_api_server/src/api_v1/: commands.rs  device.rs  tests_common.rs
mobile_api_server/src/api_v1/commands/: tests.rs
mobile_api_server/src/api_v1/device/: tests.rs
mobile_api_server/src/state/: tests.rs
mobile_api_server/tests/: test_server_binary.rs
mobile_api_server/tests/scripts/: factory_reset.sh  restart.sh  shutdown.sh
scripts/: shutdown.sh
src/: configs.rs  error.rs  lib.rs  security.rs
static/: index.html
tests/: test_create_device_info.rs
