[package]
name = "mobile_api"
version = "0.1.0"
authors = ["Ossi Saukko <ossi.saukko@centria.fi>", "Olli Isohanni <olli.isohanni@centria.fi>"]
edition = "2021"
description = "SIFIS-Home Smart Device Mobile API"
readme = "README.md"
license-file = "LICENSE"
default-run = "mobile_api_server"

[dependencies]
base64 = "0.21"
dotenvy = "0.15"
qrcodegen = "1.8"
ring = "0.16"
serde_json = "1.0"
sysinfo = "0.28"

[dependencies.clap]
features = [ "derive" ]
version = "4.2"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "uuid"]

[dependencies.rocket_okapi]
version = "0.8.0-rc.2"
features = ["rapidoc", "swagger", "uuid"]

[dependencies.schemars]
version = "0.8"
features = ["uuid1"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.3"
features = ["serde"]

[dev-dependencies]
assert_cmd = "2.0"
image = "0.24"
predicates = "3.0"
resvg = "0.30"
rmp-serde = "1.1"
rqrr = "0.6"
tempfile = "3.5"
users = "0.11"

[dev-dependencies.nix]
version = "0.26"
features = ["signal"]

[dev-dependencies.tokio]
version = "1.27"
features = ["time", "process"]

[dev-dependencies.zbus]
version = "3.11"
default-features = false
features = ["tokio"]

# Building Debian Packages
[package.metadata.deb]
name = "sifis-home-mobile-api"
license-file = ["LICENSE", "3"]
extended-description = """\
Service for allowing the Mobile Application to configure SIFIS-Home Smart Device. \
The package also contains a tool for generating a device.json file required for the server to run."""
depends = ""
section = "net"
assets = [
    ["target/release/mobile_api_server", "usr/bin/", "755"],
    ["target/release/create_device_info", "usr/bin/", "755"],
    ["static/favicon.ico", "opt/sifis-home/static/favicon.ico", "644"],
    ["static/index.html", "opt/sifis-home/static/index.html", "644"],
    ["scripts/factory_reset.sh", "opt/sifis-home/scripts/factory_reset.sh", "755"],
    ["scripts/restart.sh", "opt/sifis-home/scripts/restart.sh", "755"],
    ["scripts/shutdown.sh", "opt/sifis-home/scripts/shutdown.sh", "755"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false, unit-name = "mobile-api-server" }
