[package]
name = "create_device_info"
authors = ["Ossi Saukko <ossi.saukko@centria.fi>", "Olli Isohanni <olli.isohanni@centria.fi>"]
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
clap = { features = [ "derive" ], version = "4.0.28" }
dotenv = { version = "0.15.0" }
mobile_api = { path = "../mobile_api" }
qrcodegen = { version =  "1.8.0" }

[dev-dependencies]
assert_cmd = { version = "2.0.6" }
image = { version = "0.24.5" }
users = { version = "0.11.0" }
predicates = { version = "2.1.3" }
resvg = { version = "0.27.0" }
rqrr = { version = "0.5.2" }
tempfile = { version = "3.3.0" }
