[package]
name = "mobile_api_server"
authors = ["Ossi Saukko <ossi.saukko@centria.fi>", "Olli Isohanni <olli.isohanni@centria.fi>"]
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
dotenv = { version = "0.15.0" }
rocket = { version = "0.5.0-rc.2", features = [ "json", "uuid" ] }
rocket_okapi = { version = "0.8.0-rc.2", features = [ "rapidoc", "swagger", "uuid" ] }
mobile_api = { path = "../mobile_api" }
